--- a/CSS/style.css
+++ b/CSS/style.css
@@ -406,7 +406,7 @@ html i:active, html i:focus,  html i:hover{
 	letter-spacing:1px;
 }
 .background{
-	background:url(../IMG/background@3x.png);
+	background:url(../IMG/background@3x.jpg);
 	height:100vh;
 	background-repeat:no-repeat;
 	background-size:cover;
